--- a/src/components/contact/contact.scss
+++ b/src/components/contact/contact.scss
@@ -63,12 +63,26 @@
         left: -2rem;
         position: absolute;
     }
+
+    @media (max-width: $mobile) {
+        font-size: 3rem;
+        text-align: center;
+
+        &::before,
+        &::after {
+            display: none;
+        }
+    }
 }
 
 .contact__paragraph {
     color: white;
     line-height: 2.5rem;
     text-align: left;
+
+    @media (max-width: $mobile) {
+        font-size: 1.2rem;
+    }
 }
 
 .contact__form {
@@ -117,6 +131,11 @@
         padding: 1.7rem;
         position: relative;
         width: 100%;
+
+        @media (max-width: $mobile) {
+            font-size: 1.2rem;
+            padding: 1rem;
+        }
     }
 
     &::before {
