--- a/src/components/navbar/navbar.scss
+++ b/src/components/navbar/navbar.scss
@@ -51,6 +51,7 @@ $item_width: 7rem;
     align-items: center;
     cursor: pointer;
     display: flex;
+    font-size: 1.2rem;
     height: 100%;
     justify-content: center;
     position: absolute;
