--- a/src/components/work/project.scss
+++ b/src/components/work/project.scss
@@ -101,8 +101,10 @@
 .project__slide-item {
     position: absolute;
     transition: transform 0.2s;
+    will-change: transform;
 
     .project__slide-img {
+        box-shadow: 1rem 1rem 2rem rgba(0, 0, 0, 0.25), 0.6rem 0.6rem 0.6rem rgba(0, 0, 0, 0.35);
         height: 12.8rem;
         object-fit: cover;
         position: absolute;
@@ -110,9 +112,13 @@
         top: 0;
         transition: width 0.5s, height 0.5s;
         width: 15.5rem;
+        will-change: width, height;
     }
 
     &:first-child .project__slide-img {
+        box-shadow:
+            1.9rem 1.9rem 3.8rem rgba(0, 0, 0, 0.5),
+            1.5rem 1.5rem 1.2rem rgba(0, 0, 0, 0.3);
         height: 40rem;
         width: 50rem;
     }
