progress: finishing project details

--- a/src/components/contact/contact.scss
+++ b/src/components/contact/contact.scss
@@ -10,6 +10,7 @@
     display: flex;
     height: 100%;
     max-width: $max-width;
+    position: relative;
     width: 100%;
 }
 
@@ -188,4 +189,15 @@
         color: $teal;
         margin: 0;
     }
+}
+
+.contact__code {
+    bottom: 0;
+    left: 0;
+    position: absolute;
+}
+
+.contact__code-link {
+    color: $teal;
+    text-decoration: none;
 }
