--- a/src/components/hero/hero.scss
+++ b/src/components/hero/hero.scss
@@ -59,30 +59,53 @@
     width: 100%;
 }
 
+@keyframes fade-in {
+    to {
+        opacity: 1;
+    }
+}
+
 .hero__title {
     font-size: 7rem;
     font-weight: 800;
     position: relative;
     text-align: left;
 
-    &::before {
+    &--1::before {
+        animation: fade-in 1s 9s forwards;
         color: $charcoal;
         content: '<h1>';
         font-family: 'La Belle Aurore', cursive;
         font-size: 2rem;
         left: -4rem;
+        opacity: 0;
         position: absolute;
         top: 5rem;
+
+        @media (max-width: $mobile) {
+            display: none;
+        }
     }
 
-    &::after {
-        bottom: 0.5rem;
-        color: $charcoal;
-        content: '</h1>';
-        font-family: 'La Belle Aurore', cursive;
-        font-size: 2rem;
-        position: absolute;
-        right: 4rem;
+    &--2 {
+        color: $teal;
+        margin-left: 2rem;
+
+        &::after {
+            animation: fade-in 1s 9s forwards;
+            color: $charcoal;
+            content: '</h1>';
+            font-family: 'La Belle Aurore', cursive;
+            font-size: 2rem;
+            opacity: 0;
+            position: absolute;
+            right: -5rem;
+            top: 5rem;
+
+            @media (max-width: $mobile) {
+                display: none;
+            }
+        }
     }
 
     @media (max-width: $mobile) {
@@ -97,8 +120,11 @@
 }
 
 .hero__title-newline {
-    display: block;
+    display: inline;
+    overflow: hidden;
     text-indent: 4rem;
+    text-overflow: ellipsis;
+    white-space: nowrap;
 
     @media (max-width: $mobile) {
         font-size: 3rem;
@@ -107,18 +133,14 @@
     }
 }
 
-.hero__name {
-    color: $teal;
-}
-
 .hero__title-ampersand {
     color: $teal;
     display: block;
-    font-size: 3rem;
+    font-size: 2.5rem;
     font-weight: inherit;
+    margin-top: 1.5rem;
 
     @media (max-width: $mobile) {
-        font-size: 2.5rem;
         margin: 0;
         text-align: center;
     }
@@ -134,6 +156,7 @@
 
     @media (max-width: $mobile) {
         font-size: 1.1rem;
+        letter-spacing: 0.5rem;
         text-align: center;
     }
 }
@@ -155,7 +178,6 @@
     background: transparent;
     border: 0.2rem solid $teal;
     color: $teal;
-    font-size: 1.8rem;
     letter-spacing: 0.9rem;
     margin: 4rem;
     padding: 1rem 2rem;
@@ -165,4 +187,28 @@
         background: $teal;
         color: white;
     }
+
+    @media (max-width: $mobile) {
+        font-size: 1.1rem;
+    }
+}
+
+.typed-cursor {
+    animation: typed-js-blink 0.7s infinite;
+    color: white;
+    font-size: 6rem;
+    opacity: 1;
+    position: absolute;
+}
+
+@keyframes typed-js-blink {
+    50% {
+        opacity: 0;
+    }
+}
+
+.typed-fade-out {
+    animation: 0;
+    opacity: 0;
+    transition: opacity 0.25s;
 }
