--- a/src/components/hero/hero.scss
+++ b/src/components/hero/hero.scss
@@ -1,5 +1,21 @@
 @import '../../globals';
 
+@keyframes typed-js-blink {
+    50% {
+        opacity: 0;
+    }
+}
+
+@keyframes fade-in {
+    to {
+        opacity: 1;
+    }
+}
+
+@mixin fade-in($delay: 0) {
+    animation: fade-in 1s $delay forwards;
+}
+
 .hero {
     background: $dark;
 }
@@ -59,12 +75,6 @@
     width: 100%;
 }
 
-@keyframes fade-in {
-    to {
-        opacity: 1;
-    }
-}
-
 .hero__title {
     font-size: 7rem;
     font-weight: 800;
@@ -72,7 +82,8 @@
     text-align: left;
 
     &--1::before {
-        animation: fade-in 1s 9s forwards;
+        @include fade-in(9s);
+
         color: $charcoal;
         content: '<h1>';
         font-family: 'La Belle Aurore', cursive;
@@ -92,7 +103,8 @@
         margin-left: 2rem;
 
         &::after {
-            animation: fade-in 1s 9s forwards;
+            @include fade-in(9s);
+
             color: $charcoal;
             content: '</h1>';
             font-family: 'La Belle Aurore', cursive;
@@ -199,12 +211,6 @@
     font-size: 6rem;
     opacity: 1;
     position: absolute;
-}
-
-@keyframes typed-js-blink {
-    50% {
-        opacity: 0;
-    }
 }
 
 .typed-fade-out {
