--- a/src/components/layout.scss
+++ b/src/components/layout.scss
@@ -4,23 +4,29 @@
     position: relative;
 
     &::before {
+        @include fade-in(9.5s);
+
         color: $charcoal;
         content: '<body>';
         font-family: 'La Belle Aurore', cursive;
         font-size: 2rem;
         left: 4rem;
+        opacity: 0;
         position: fixed;
         top: 3.5rem;
         z-index: 10;
     }
 
     &::after {
+        @include fade-in(9.5s);
+
         bottom: 3.5rem;
         color: $charcoal;
         content: '</body>';
         font-family: 'La Belle Aurore', cursive;
         font-size: 2rem;
         left: 4rem;
+        opacity: 0;
         position: fixed;
         z-index: 10;
     }
