--- a/src/components/contact/contact.scss
+++ b/src/components/contact/contact.scss
@@ -93,6 +93,11 @@
     grid-template-rows: 1fr 1fr 3fr;
     margin-top: 3rem;
     width: 100%;
+
+    @media (max-width: $mobile) {
+        display: flex;
+        flex-direction: column;
+    }
 }
 
 .contact__field {
@@ -137,6 +142,10 @@
             font-size: 1.2rem;
             padding: 1rem;
         }
+    }
+
+    input {
+        max-height: 5rem;
     }
 
     &::before {
