--- a/src/components/contact/contact.scss
+++ b/src/components/contact/contact.scss
@@ -28,6 +28,7 @@
 
     @media (max-width: $mobile) {
         height: 100%;
+        justify-content: flex-start;
         width: 100%;
 
         &--right {
@@ -67,6 +68,7 @@
 
     @media (max-width: $mobile) {
         font-size: 3rem;
+        margin-bottom: 2rem;
         text-align: center;
 
         &::before,
@@ -162,6 +164,12 @@
 
     &.active::before {
         width: 100%;
+    }
+
+    @media (max-width: $mobile) {
+        &:not(:first-child) {
+            margin-top: 1rem;
+        }
     }
 }
 
