bugfix: slider perspective speed adjust

--- a/src/components/skills/skills.scss
+++ b/src/components/skills/skills.scss
@@ -54,10 +54,10 @@
         }
 
         &--left {
-            padding: 2rem;
+            align-items: flex-end;
 
             svg {
-                height: 100%;
+                height: 80%;
             }
         }
     }
