--- a/src/components/work/project.scss
+++ b/src/components/work/project.scss
@@ -15,6 +15,10 @@
         opacity: 1;
         transform: scale(1);
     }
+
+    @media (max-width: $mobile) {
+        width: 100%;
+    }
 }
 
 .project__icon-container {
@@ -30,6 +34,11 @@
         height: 100%;
         width: 100%;
     }
+
+    @media (max-width: $mobile) {
+        height: 2rem;
+        width: 2rem;
+    }
 }
 
 .project__title {
@@ -37,6 +46,11 @@
     left: 50%;
     max-width: 120rem;
     text-align: left;
+
+    @media (max-width: $mobile) {
+        font-size: 1.5rem;
+        text-align: center;
+    }
 }
 
 .project__inner {
@@ -46,18 +60,34 @@
     position: absolute;
     transform: translateX(-50%);
     width: 100%;
+
+    @media (max-width: $mobile) {
+        padding: 1.5rem;
+        position: initial;
+        transform: initial;
+    }
 }
 
 .project__text {
     left: 52rem;
     position: absolute;
     top: 27rem;
+
+    @media (max-width: $mobile) {
+        position: initial;
+    }
 }
 
 .project__description {
     line-height: 3rem;
     text-align: left;
     text-indent: 2rem;
+
+    @media (max-width: $mobile) {
+        font-size: 1rem;
+        line-height: initial;
+        text-indent: initial;
+    }
 }
 
 .project__text-title {
@@ -65,6 +95,12 @@
     letter-spacing: 0.5rem;
     margin-top: 3rem;
     text-align: left;
+
+    @media (max-width: $mobile) {
+        font-size: 1.5rem;
+        letter-spacing: 0.2rem;
+        margin-top: 1.5rem;
+    }
 }
 
 .project__tech-list {
@@ -74,11 +110,19 @@
     height: 20rem;
     text-align: left;
     width: 45rem;
+
+    @media (max-width: $mobile) {
+        height: 7rem;
+        width: initial;
+    }
 }
 
 .project__tech-item {
     align-items: center;
     display: flex;
+    margin: 0;
+    padding: 0;
+    width: 50%;
 
     &::before {
         color: $teal;
@@ -86,6 +130,16 @@
         font-size: 3rem;
         line-height: 1;
         margin-right: 1rem;
+
+        @media (max-width: $mobile) {
+            font-size: 1.5rem;
+            margin-right: 0.5rem;
+        }
+    }
+
+    @media (max-width: $mobile) {
+        font-size: 1rem;
+        margin: 0;
     }
 }
 
@@ -93,11 +147,13 @@
     height: 50rem;
     position: relative;
     width: 100%;
+
+    @media (max-width: $mobile) {
+        height: 30rem;
+    }
 }
 
 .project__slider {
-    display: flex;
-    height: 100%;
     position: relative;
     transition: all 0.3s;
     width: 100%;
@@ -109,7 +165,9 @@
     will-change: transform;
 
     .project__slide-img {
-        box-shadow: 1rem 1rem 2rem rgba(0, 0, 0, 0.25), 0.6rem 0.6rem 0.6rem rgba(0, 0, 0, 0.35);
+        box-shadow:
+            1rem 1rem 2rem rgba(0, 0, 0, 0.25),
+            0.6rem 0.6rem 0.6rem rgba(0, 0, 0, 0.35);
         height: 12.8rem;
         object-fit: cover;
         position: absolute;
@@ -126,12 +184,32 @@
             1.5rem 1.5rem 1.2rem rgba(0, 0, 0, 0.3);
         height: 40rem;
         width: 50rem;
+
+        @media (max-width: $mobile) {
+            height: 24rem;
+            width: 30rem;
+        }
     }
 
     @media (max-width: $mobile) {
-        &:not(:first-child) {
-            display: none;
+        &:first-child {
+            z-index: 1;
         }
+    }
+}
+
+.project__btn-group {
+    display: flex;
+    left: 52rem;
+    position: absolute;
+    top: 14.8rem;
+
+    @media (max-width: $mobile) {
+        bottom: 0;
+        flex-direction: row-reverse;
+        left: 50%;
+        top: initial;
+        transform: translateX(-50%);
     }
 }
 
@@ -141,12 +219,10 @@
     color: $teal;
     cursor: pointer;
     height: 4rem;
-    left: 52rem;
     min-width: 5rem;
     padding: 1rem;
-    position: absolute;
-    top: 14.8rem;
     transition: all 0.2s;
+    white-space: nowrap;
 
     &:hover {
         border-color: lighten($teal, 25%);
@@ -159,11 +235,21 @@
         transform: scale(1.1);
     }
 
-    &--view {
-        left: 58rem;
+    &:not(:first-child) {
+        margin-right: 1rem;
     }
 
-    &--code {
-        left: 73rem;
+    @media (max-width: $mobile) {
+        align-items: center;
+        display: flex;
+        font-size: 1rem;
+        height: 3rem;
+        justify-content: center;
+        min-width: 2.5rem;
+        padding: 0.5rem;
+
+        &:nth-child(2) {
+            display: none;
+        }
     }
 }
