--- a/src/components/work/project.scss
+++ b/src/components/work/project.scss
@@ -5,6 +5,7 @@
     height: 100%;
     left: 0;
     opacity: 0;
+    overflow-y: auto;
     position: fixed;
     top: 0;
     transform: scale(0);
