--- a/src/globals.scss
+++ b/src/globals.scss
@@ -89,6 +89,7 @@ button {
     display: none;
     height: 3.5rem;
     outline: 0;
+    padding: 0;
     position: fixed;
     right: 1rem;
     width: 3.5rem;
