--- a/src/components/hero/hero.scss
+++ b/src/components/hero/hero.scss
@@ -38,7 +38,7 @@
     width: 90%;
 
     @media (max-width: $mobile) {
-        flex-direction: column;
+        flex-direction: column-reverse;
         margin-right: initial;
     }
 }
@@ -61,12 +61,8 @@
     }
 
     @media (max-width: $mobile) {
-        height: 100%;
+        height: 50%;
         width: 100%;
-
-        &--left {
-            display: none;
-        }
     }
 }
 
