--- a/src/components/hero/workstation/workstation.scss
+++ b/src/components/hero/workstation/workstation.scss
@@ -7,11 +7,15 @@
     height: 100%;
     justify-content: center;
     left: 50%;
-    max-width: calc(1400rem / 2);
+    max-width: calc(1400em / 2);
     position: absolute;
     top: 50%;
     transform: translate(-50%, -50%);
     width: 100%;
+
+    @media (max-width: $mobile) {
+        font-size: 5px;
+    }
 }
 
 .desk {
@@ -23,29 +27,29 @@
 
 .desk__table-top {
     background: $off-white;
-    height: 1rem;
+    height: 1em;
     position: relative;
-    transform: translateY(-0.5rem);
+    transform: translateY(-0.5em);
     width: 100%;
 
     &::before {
         background: $off-white;
         content: '';
-        height: 15rem;
-        left: 5.5rem;
+        height: 15em;
+        left: 5.5em;
         position: absolute;
-        top: 1.5rem;
-        width: 1rem;
+        top: 1.5em;
+        width: 1em;
     }
 
     &::after {
         background: $off-white;
-        border-top: 0.1rem solid $light-gray;
+        border-top: 0.1em solid $light-gray;
         content: '';
-        height: 0.5rem;
+        height: 0.5em;
         left: 50%;
         position: absolute;
-        top: 1rem;
+        top: 1em;
         transform: translateX(-50%);
         width: 90%;
     }
@@ -56,80 +60,80 @@
     background: $off-white;
     display: flex;
     flex-direction: column;
-    height: 15rem;
+    height: 15em;
     justify-content: space-around;
     list-style-type: none;
     margin: 0;
     padding: 0;
     position: relative;
-    right: 5.5rem;
-    width: 10rem;
+    right: 5.5em;
+    width: 10em;
 }
 
 .desk__drawer-face {
     background: $dark;
-    height: 3rem;
+    height: 3em;
     list-style-type: none;
     position: relative;
-    width: 8rem;
+    width: 8em;
 
     &::before {
         background: $off-white;
-        border-radius: 0 0 0.75rem 0.75rem;
+        border-radius: 0 0 0.75em 0.75em;
         content: '';
-        height: 1rem;
+        height: 1em;
         left: 50%;
         position: absolute;
         top: 50%;
         transform: translate(-50%, -50%);
-        width: 2.5rem;
+        width: 2.5em;
     }
 }
 
 .chair {
     align-items: center;
-    bottom: -17.2rem;
+    bottom: -17.2em;
     display: flex;
     flex-direction: column;
-    height: 30rem;
+    height: 30em;
     justify-content: flex-start;
     left: 50%;
     position: absolute;
     transform: translateX(-50%);
-    width: 11rem;
+    width: 11em;
 }
 
 .chair__back-post {
     background: $darker;
-    border-radius: 1rem;
+    border-radius: 1em;
     height: 65%;
     position: relative;
     width: 100%;
 
     &::before {
         background: $light-gray;
-        bottom: -1.5rem;
+        bottom: -1.5em;
         content: '';
-        height: 1.5rem;
+        height: 1.5em;
         left: 50%;
         position: absolute;
         transform: translateX(-50%);
-        width: 1rem;
+        width: 1em;
     }
 }
 
 .chair__seat {
     background: $darker;
-    border-radius: 0 0 1.5rem 1.5rem;
-    height: 1.5rem;
-    transform: translateY(1.5rem);
+    border-radius: 0 0 1.5em 1.5em;
+    height: 1.5em;
+    transform: translateY(1.5em);
     width: 100%;
 
     &::before {
         background: $light-gray;
-        bottom: -0.3rem;
+        bottom: -0.3em;
         content: '';
-        height: 0.3rem;
+        height: 0.3em;
         left: 50%;
         position: absolute;
         transform: translateX(-50%);
@@ -138,13 +142,13 @@
 
     &::after {
         background: $light-gray;
-        bottom: -1.3rem;
+        bottom: -1.3em;
         content: '';
-        height: 1rem;
+        height: 1em;
         left: 50%;
         position: absolute;
         transform: translateX(-50%);
-        width: 1.5rem;
+        width: 1.5em;
     }
 }
 
@@ -158,24 +162,24 @@
 .chair__tripod-center {
     background: $light-gray;
     clip-path: polygon(20% 0%, 80% 0%, 60% 100%, 40% 100%);
-    height: 6.2rem;
-    width: 1.7rem;
+    height: 6.2em;
+    width: 1.7em;
 }
 
 .chair__tripod-leg {
     background: $light-gray;
     bottom: 0;
     clip-path: polygon(100% 39%, 100% 58%, 46% 100%, 40% 100%);
-    height: 4rem;
-    left: -3.4rem;
+    height: 4em;
+    left: -3.4em;
     position: absolute;
-    width: 4rem;
+    width: 4em;
     z-index: 100;
 
     &--right {
         background: $light-gray;
         left: initial;
-        right: -3.3rem;
+        right: -3.3em;
         transform: rotateY(180deg);
     }
 }
@@ -185,14 +189,14 @@
     justify-content: space-between;
     position: relative;
     top: 0;
-    transform: translateY(-1.3rem);
+    transform: translateY(-1.3em);
     width: 80%;
 }
 
-$horizontal-screen-height: 10rem;
-$horizontal-screen-width: 20rem;
-$vertical-screen-height: 17rem;
-$vertical-screen-width: 12rem;
+$horizontal-screen-height: 10em;
+$horizontal-screen-width: 20em;
+$vertical-screen-height: 17em;
+$vertical-screen-width: 12em;
 
 @keyframes infiniteSlideA {
     0% {
@@ -223,16 +227,16 @@ $vertical-screen-width: 12rem;
     position: relative;
 
     &--horizontal {
-        transform: translate(2rem, 3.6rem);
+        transform: translate(2em, 3.6em);
     }
 
     &--vertical {
-        transform: translate(-2rem, 0.1rem);
+        transform: translate(-2em, 0.1em);
     }
 }
 
 .my-stuff__screen-inner {
-    border-radius: 0.3rem;
+    border-radius: 0.3em;
     height: $vertical-screen-height;
     overflow: hidden;
     position: relative;
@@ -246,7 +250,7 @@ $vertical-screen-width: 12rem;
 
 .my-stuff__frame {
     background: transparent;
-    border: 0.6rem solid $darker;
+    border: 0.6em solid $darker;
     height: $vertical-screen-height;
     position: absolute;
     width: 100%;
@@ -285,54 +289,54 @@ $vertical-screen-width: 12rem;
 
 .my-stuff__base {
     background: $darker;
-    border: 0.7rem solid $darkest;
+    border: 0.7em solid $darkest;
     border-left-color: $dark;
     border-right-color: $dark;
     border-top: 0;
-    height: 1.5rem;
+    height: 1.5em;
     position: relative;
-    width: 4rem;
+    width: 4em;
 }
 
 .my-stuff__base-bottom {
     background: $darker;
-    bottom: -1.3rem;
-    height: 0.6rem;
+    bottom: -1.3em;
+    height: 0.6em;
     position: absolute;
-    transform: translateX(-0.7rem);
-    width: 4rem;
+    transform: translateX(-0.7em);
+    width: 4em;
 }
 
 .my-stuff__coffee {
     background: $off-white;
-    border-radius: 0.2rem 0.2rem 1rem 1rem;
-    bottom: -15.4rem;
-    height: 4rem;
+    border-radius: 0.2em 0.2em 1em 1em;
+    bottom: -15.4em;
+    height: 4em;
     position: relative;
-    right: 3rem;
-    width: 3rem;
+    right: 3em;
+    width: 3em;
 
     &::before {
         background: $light-gray;
-        border-radius: 3rem;
+        border-radius: 3em;
         content: '';
         height: 80%;
-        left: 2.2rem;
+        left: 2.2em;
         position: absolute;
-        transform: translateY(0.5rem);
-        width: 0.4rem;
+        transform: translateY(0.5em);
+        width: 0.4em;
     }
 
     &::after {
         background: $light-gray;
-        border-radius: 3rem;
-        bottom: 0.1rem;
+        border-radius: 3em;
+        bottom: 0.1em;
         content: '';
-        height: 0.5rem;
-        left: 2rem;
+        height: 0.5em;
+        left: 2em;
         position: absolute;
         transform: rotate(35deg);
-        width: 0.4rem;
+        width: 0.4em;
     }
 }
 
@@ -340,54 +344,58 @@ $vertical-screen-width: 12rem;
     background: $off-white;
     border-radius: 50%;
     content: '';
-    height: 2.5rem;
+    height: 2.5em;
     position: absolute;
-    right: -1.3rem;
-    top: 0.5rem;
-    width: 2rem;
+    right: -1.3em;
+    top: 0.5em;
+    width: 2em;
     z-index: -1;
 
     &::before {
         background: $dark;
         border-radius: 50%;
         content: '';
-        height: 1.4rem;
+        height: 1.4em;
         left: 50%;
         position: absolute;
         top: 50%;
         transform: translate(-50%, -50%);
-        width: 1rem;
+        width: 1em;
     }
 }
 
 .my-stuff__coffee-steam {
     color: $off-white;
     font-family: 'Caveat', cursive;
-    font-size: 3rem;
+    font-size: 3em;
     left: 50%;
     margin: 0;
     position: absolute;
-    top: -3.5rem;
+    top: -3.5em;
     transform: translateX(-50%);
 
     &::before {
         background: $dark;
         border-radius: 50%;
         content: '';
-        height: 0.5rem;
+        height: 0.5em;
         position: absolute;
-        right: 0.3rem;
-        top: 2.3rem;
-        width: 1rem;
+        right: 0.3em;
+        top: 2.3em;
+        width: 1em;
+    }
+
+    @media (max-width: $mobile) {
+        top: -1em;
     }
 }
 
 .board {
     background: url('../../../static/workboard.svg') center center no-repeat;
     background-size: contain;
-    height: 20rem;
-    left: 5rem;
+    height: 20em;
+    left: 5em;
     position: absolute;
-    top: -35rem;
-    width: 28rem;
+    top: -35em;
+    width: 28em;
 }
